Ready for Beta 5

--- a/Menuling/Resources/QuickMount.xib
+++ b/Menuling/Resources/QuickMount.xib
@@ -2,9 +2,9 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.02">
 	<data>
 		<int key="IBDocument.SystemTarget">1050</int>
-		<string key="IBDocument.SystemVersion">9C31</string>
-		<string key="IBDocument.InterfaceBuilderVersion">648</string>
-		<string key="IBDocument.AppKitVersion">949.26</string>
+		<string key="IBDocument.SystemVersion">9D34</string>
+		<string key="IBDocument.InterfaceBuilderVersion">670</string>
+		<string key="IBDocument.AppKitVersion">949.33</string>
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -48,6 +48,7 @@
 				<string key="NSWindowTitle">Connect to Server</string>
 				<string key="NSWindowClass">MGFadingWindow</string>
 				<nil key="NSViewClass"/>
+				<string key="NSWindowContentMaxSize">{3.40282e+38, 3.40282e+38}</string>
 				<object class="NSView" key="NSWindowView" id="490163920">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -269,6 +270,16 @@
 								<reference key="NSTextColor" ref="981772410"/>
 							</object>
 						</object>
+						<object class="NSProgressIndicator" id="864390618">
+							<reference key="NSNextResponder" ref="490163920"/>
+							<int key="NSvFlags">-2147482356</int>
+							<object class="NSPSMatrix" key="NSDrawMatrix"/>
+							<string key="NSFrame">{{356, 14}, {32, 32}}</string>
+							<reference key="NSSuperview" ref="490163920"/>
+							<int key="NSpiFlags">20490</int>
+							<double key="NSMinValue">1.600000e+01</double>
+							<double key="NSMaxValue">1.000000e+02</double>
+						</object>
 					</object>
 					<string key="NSFrameSize">{434, 284}</string>
 					<reference key="NSSuperview"/>
@@ -353,45 +364,20 @@
 					<int key="connectionID">60</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">doubleClickArgument: selectedObjects</string>
-						<reference key="source" ref="416415569"/>
-						<reference key="destination" ref="568177392"/>
-						<object class="NSNibBindingConnector" key="connector" id="71797426">
-							<reference key="NSSource" ref="416415569"/>
-							<reference key="NSDestination" ref="568177392"/>
-							<string key="NSLabel">doubleClickArgument: selectedObjects</string>
-							<string key="NSBinding">doubleClickArgument</string>
-							<string key="NSKeyPath">selectedObjects</string>
-							<object class="NSDictionary" key="NSOptions">
-								<string key="NS.key.0">NSSelectorName</string>
-								<string key="NS.object.0">recentClicked:</string>
-							</object>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">connectButton</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="769921749"/>
 					</object>
-					<int key="connectionID">66</int>
+					<int key="connectionID">71</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">doubleClickTarget: self</string>
-						<reference key="source" ref="416415569"/>
-						<reference key="destination" ref="1001"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="416415569"/>
-							<reference key="NSDestination" ref="1001"/>
-							<string key="NSLabel">doubleClickTarget: self</string>
-							<string key="NSBinding">doubleClickTarget</string>
-							<string key="NSKeyPath">self</string>
-							<object class="NSDictionary" key="NSOptions">
-								<string key="NS.key.0">NSSelectorName</string>
-								<string key="NS.object.0">recentClicked:</string>
-							</object>
-							<reference key="NSPreviousConnector" ref="71797426"/>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">indicator</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="864390618"/>
 					</object>
-					<int key="connectionID">67</int>
+					<int key="connectionID">72</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -446,6 +432,7 @@
 							<reference ref="457018774"/>
 							<reference ref="769921749"/>
 							<reference ref="599290354"/>
+							<reference ref="864390618"/>
 						</object>
 						<reference key="parent" ref="520949498"/>
 					</object>
@@ -535,6 +522,11 @@
 						<reference key="object" ref="700222931"/>
 						<reference key="parent" ref="587061919"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">69</int>
+						<reference key="object" ref="864390618"/>
+						<reference key="parent" ref="490163920"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -557,8 +549,10 @@
 					<string>58.IBPluginDependency</string>
 					<string>58.IBWindowTemplateEditedContentRect</string>
 					<string>58.NSWindowTemplate.visibleAtLaunch</string>
+					<string>58.windowTemplate.maxSize</string>
 					<string>59.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
+					<string>69.IBPluginDependency</string>
 					<string>7.IBPluginDependency</string>
 					<string>8.IBPluginDependency</string>
 					<string>9.IBPluginDependency</string>
@@ -581,6 +575,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{620, 239}, {434, 284}}</string>
 					<integer value="1"/>
+					<string>{3.40282e+38, 3.40282e+38}</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -608,7 +604,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">67</int>
+			<int key="maxID">72</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -633,16 +629,16 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>qmProgress</string>
-							<string>qmTabView</string>
+							<string>connectButton</string>
+							<string>indicator</string>
 							<string>qmTextField</string>
 							<string>recentsArrayController</string>
 							<string>recentsTableView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSButton</string>
 							<string>NSProgressIndicator</string>
-							<string>NSTabView</string>
 							<string>NSTextField</string>
 							<string>NSArrayController</string>
 							<string>NSTableView</string>
@@ -663,6 +659,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">NSWindowController</string>
+					<string key="superclassName">NSResponder</string>
 					<object class="NSMutableDictionary" key="actions">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSMutableArray" key="dict.sortedKeys">
@@ -701,7 +698,7 @@
 			</object>
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
-		<nil key="IBDocument.LastKnownRelativeProjectPath"/>
+		<string key="IBDocument.LastKnownRelativeProjectPath">../../MacFusion2.xcodeproj</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 	</data>
 </archive>
